src/MainPage.css
.ICON{
    display: inline-block;
    margin: auto;
    gap: 10px;
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 50px;
    background-image: linear-gradient(to bottom right, #a6e2f9, #6bdfec);
    text-align: left;
    align-items: center;
    z-index: 3;

    font-family: Georgia, 'Times New Roman', Times, serif; /* Text if picture wasn't loaded*/
    font-size: 20px;
    font-weight: 600;

    transition: background-color 0.3s, color 0.3s;
}

img {
    width: auto;
    height: 100px;
}

.panel {
    position: absolute;
    top: 14%;
    left: 5%;
    width: 30%;
    height: 70%;
    justify-content: space-between;
    display: flex;
    overflow: hidden;
    flex-direction: column;
    box-sizing: border-box;
    background-color: #e7f6f8;
    border-left: 3px solid #8bd3ed;
    box-shadow: -3px 0 5px rgba(0, 0, 0, 0.5);
    gap: 5px;
    border-radius: 30px;
    padding: 10px;
    z-index: 2;

    transition: background-color 0.3s, color 0.3s;
}

/* Content in the panel */
.Video-audio-Select {
    position: relative;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    font-size: 1em;
}

.commentbox {
  height: 55vh;
  width: 25vh;
  overflow-y: scroll;
  border: 1px solid #a2a1a1;
  margin-bottom: 10px;
  border-radius: 20px;
}

.MediaBox {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 5px;
    align-items: center;
}

.button-4 .search {
    grid-column: 2;
}

.inputbox {
    position: relative;
    font-size: 1vw;
    grid-column: 1;
}

.imageGrid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    height: 60%;
    overflow: scroll;
    gap: 5px;
    align-items: center;
}

.videoGrid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  height: 40%;
  overflow: scroll;
  gap: 5px;
  align-items: center;
}

.selection-result-bar {
  top: 8%;
  position: absolute;
  display: flex;
  gap: 20px;
  justify-content: center;
  width: 100%;
}

.feature-select {
  bottom: 1%;
  position: absolute;
  display: flex;
  gap: 20px;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.hidden {
  display: none;
}
/* End: Content in the panel*/

.content {
    top: 14%;
    right: 2%;
    width: 60%;
    height: 45%;
    background-color: #e7f6f8;
    border: 1px solid #bfb9b9;
    border-left: 3px solid #8bd3ed;
    box-shadow: -3px 0 5px rgba(0, 0, 0, 0.5);
    border-radius: 20px;
    overflow: auto;
    position: absolute;
    box-sizing: border-box;
    flex: 2;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;

    transition: background-color 0.3s, color 0.3s;
}

.bottom {
    flex: 2;
    position: fixed;
    justify-content: center;
    bottom: 2%;
    right: 2%;
    width: 59%;
    height: 35%;
    background-color: #1f1f1f;
    border-radius: 10px;
    padding: 0.5%;
    z-index: 2;
}

/* Theme Button */
.button {
  position: absolute;
  left: 5%;
  bottom: 5%;
  width: 30%;

  align-items: center;
  background-color: #fff;
  border-radius: 12px;
  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 6px 20px;
  box-sizing: border-box;
  color: #0b0720;
  cursor: pointer;
  display: inline-flex;
  flex: 1 1 auto;
  font-family: Inter,sans-serif;
  font-size: 1.2rem;
  font-weight: 700;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: none;
  padding: 1rem 1.2rem;
  text-align: center;
  text-decoration: none;
  transition: box-shadow .2s,-webkit-box-shadow .2s;
  white-space: nowrap;
  border: 0;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;

  transition: background-color 0.3s, color 0.3s;
  z-index: 3;
}

.button:hover {
  box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
}

/* Feature Button */
.button-4 {
  width: 10vw;
  appearance: none;
  background-color: #FAFBFC;
  border: 1px solid rgba(27, 31, 35, 0.15);
  border-radius: 6px;
  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
  box-sizing: border-box;
  color: #24292E;
  cursor: pointer;
  display: inline-block;
  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  font-size: 0.85vw;
  font-weight: 500;
  line-height: 1em;
  list-style: none;
  padding: 6px 16px;
  position: relative;
  transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: middle;
  white-space: nowrap;
  word-wrap: break-word;
}

.button-4:hover {
  background-color: #F3F4F6;
  text-decoration: none;
  transition-duration: 0.1s;
}

.button-4:disabled {
  background-color: #FAFBFC;
  border-color: rgba(27, 31, 35, 0.15);
  color: #959DA5;
  cursor: default;
}

.button-4:active {
  background-color: #EDEFF2;
  box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
  transition: none 0s;
}

.button-4:focus {
  outline: 1px transparent;
}

.button-4:before {
  display: none;
}

.button-4:-webkit-details-marker {
  display: none;
}

/* Dark Theme */
body.dark {
    color: #ffffff;
    background-color: #160c22;
}

body.dark .ICON {
    background-image: linear-gradient(to bottom right, #181a27, #1d202d);
}

body.dark .panel {
    background-color: #1a1a42;
    border-left: 3px solid #16171f;
}

body.dark .content {
    border: 1px solid #181717;
    background-color: #1a1a42;
    border-left: 3px solid #16171f;
}

body.dark .button {
    background-color: #1a1a42;
    color: #fff;
}

body.dark button{
    background-color: #262b39;
    color: #acb3d4;
}

body.dark button:hover {
    box-shadow: #ffffff 0 0 0 3px, transparent 0 0 0 0;
  }

